# POSTMNA-IN-RUST

./: .env
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/app/: page.tsx
