[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
hyper = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2.8"
bson = "2.8"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
