[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
tower-http = { version = "0.3", features = ["cors"] }
mongodb = { version = "2.4.0", features = ["tokio-runtime"] }
url = "2"
anyhow = "1.0"


